--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="postgresql://neondb_owner:8jAMidTlr9VG@ep-yellow-dawn-a5ay3kxh.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+#Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3dlZXQtc3RhcmZpc2gtMjUuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_e64EVYrpcdUxCG4Pyc7EIWVawW0wv2p53Aon7nkKxa
